Fix text color for dark mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -90,6 +90,7 @@ input {
 
 input:not([type='file']) {
   background-color: white;
+  color: black;
 }
 
 input[type='file'] {
